# dotfiles

.config/fish/: config.fish  config.fish~  fish_variables  fishfile
.config/nvim/: .netrwhist  bd  init.vim
.config/qutebrowser/: autoconfig.yml  config.py  global_marks  quickmarks
.emacs.d/: .emacs.desktop  .init.el.~undo-tree~  .lsp-session-v1  Nordless_fork-theme.el  bookmarks  init.bak  init.el  init.el~  projectile-bookmarks.eld  test.el
.emacs.d/auto-save-list/: .saves-10192-2017~  .saves-18690-2017~  .saves-1936-2017~  .saves-19511-2017~  .saves-20219-2017~  .saves-20764-2017~  .saves-21604-2017~  .saves-21773-2017~  .saves-30455-2017~  .saves-30734-2017~  .saves-31651-2017~  .saves-3242-2017~  .saves-4833-2017~  .saves-5385-2017~  .saves-644-2017~  .saves-803-2017~  .saves-808-2017~  .saves-814-2017~  .saves-852-2017~
.emacs.d/backups/: !dev!shm!pass.C036TyiVl3qMS!nUZNEU-paypal-daniel@codesections.com.txt~  !dev!shm!pass.EY9xzDoQmMuR9!118PwG-Birmingham-Jefferson-Library-21405019851159.txt~  !dev!shm!pass.PW15FZvkJmZrP!zkLmRm-paypal-daniel@codesections.com.txt~  !dev!shm!pass.ZNU8W9TnQtuev!gDg0xQ-licence_plate.txt~  !dev!shm!pass.r5mVKn3ZXIEtS!EoY409-driver_license.txt~  !home!dsock!.Xmodmap~  !home!dsock!.Xresources~  (+115 more)
.emacs.d/rust-playground/at-2019-04-22-213742/: Cargo.toml
.emacs.d/rust-playground/at-2019-04-22-213742/src/: main.rs
.stumpwm.d/: .bindings.lisp.~undo-tree~  bindings.lisp  bindings.lisp~  commands.lisp  default-placement  init.lisp  init.lisp~  last-placement  mode-line.lisp  startup-greeting.lisp  visual.lisp  visual.lisp~
(+269 files in other folders)
